--- a/perber/public/css/perber.css
+++ b/perber/public/css/perber.css
@@ -1,8 +1,8 @@
 /* 
 * @Author: hanjiyun
 * @Date:   2014-01-02 01:59:11
-* @Last Modified by:   Jiyun
-* @Last Modified time: 2015-07-08 16:41:58
+* @Last Modified by:   hanjiyun
+* @Last Modified time: 2016-11-11 15:55:35
 */
 
 /*
@@ -315,6 +315,7 @@ body{
     color: #4183c4;
 }
 
+
 /*===========*/
 
 .chat-list{
@@ -324,7 +325,7 @@ body{
     margin-top: 80px;
     text-align: center;
 }
-.chat{
+.chat {
     position: relative;
     margin: 0 auto;
     text-align: left;
@@ -344,6 +345,15 @@ body{
     font-size: 24px;
     color: #c00;
 }*/
+
+.chat-box.share-buttons {
+  min-height: 20px;
+  height: 20px;
+  line-height: 1;
+  text-align: right !important;
+  z-index: 2;
+  font-size: 13px;
+}
 
 
 @-webkit-keyframes expand {
