updata packages, fix bugs

--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -43,59 +43,57 @@ block content
                         //-     | 3. “网站介绍”神马的点击右上角的图标就好了，反正也没人看。对技术感兴趣的可以去<a target="_blank" href="https://github.com/naoyeye/Perber">这里</a>看代码，简单的<mark>socket.io + node.js</mark>。好了，飞走~~ ʅ(‾◡◝)ʃ
 
 
-                        //- card 1 bg+text
-                        .fixed_block.card_3
-                            .ui.right.teal.corner.label(title="友情置顶")
-                                i.fa-smile-o.fa
-                            .ta_cont
-                                h4 你觉得自己好不好看？
-                                p 好看就点头，不好看就摇头<br> 哈哈哈哈
-                                //- p <strong>功能描述：</strong><br><br>为了保证Perber中的内容质量，计划开发新的功能：每个人都可以对内容进行“赞”和“踩”。<br>如果某条内容得到的“赞”比“踩”多，则在一定时期内(一周？)不能删除；反之，则可以随时被任何人删除。
-                                #vote_bar
-                                #vote_info 此调查会在某月某日截止
+                        //- //- card 1 bg+text
+                        //- .fixed_block.card_3
+                        //-     .ui.right.teal.corner.label(title="友情置顶")
+                        //-         i.fa-smile-o.fa
+                        //-     .ta_cont
+                        //-         h4 你觉得自己好不好看？
+                        //-         p 好看就点头，不好看就摇头<br> 哈哈哈哈
+                        //-         //- p <strong>功能描述：</strong><br><br>为了保证Perber中的内容质量，计划开发新的功能：每个人都可以对内容进行“赞”和“踩”。<br>如果某条内容得到的“赞”比“踩”多，则在一定时期内(一周？)不能删除；反之，则可以随时被任何人删除。
+                        //-         #vote_bar
+                        //-         #vote_info 此调查会在某月某日截止
 
 
-                        //- card 1 bg+text
-                        .fixed_block.card_1
-                            .ui.right.teal.corner.label(title="友情置顶")
-                                i.fa-star.fa
-                            .imgbox
-                                .ta_cont
-                                    p(style="font-size:12px; text-align:center;")
+                        //- //- card 1 bg+text
+                        //- .fixed_block.card_1
+                        //-     .ui.right.teal.corner.label(title="友情置顶")
+                        //-         i.fa-star.fa
+                        //-     .imgbox
+                        //-         .ta_cont
+                        //-             p(style="font-size:12px; text-align:center;")
 
-                                        a(href="http://han.im/",target="_blank")
-                                            i(style="display:block;width:40px;height:40px;background:url(http://img3.douban.com/icon/ul1203352-424.jpg) center center no-repeat; background-size:45px;border-radius:50%;margin: 0 auto;margin-bottom:10px;border:1px solid #7bb487;")
-                                            | http://han.im
+                        //-                 a(href="http://han.im/",target="_blank")
+                        //-                     i(style="display:block;width:40px;height:40px;background:url(http://img3.douban.com/icon/ul1203352-424.jpg) center center no-repeat; background-size:45px;border-radius:50%;margin: 0 auto;margin-bottom:10px;border:1px solid #7bb487;")
+                        //-                     | http://han.im
 
-                                       //- span
-                                           //- | —— nobody 2014.04.03
+                        //-                //- span
+                        //-                    //- | —— nobody 2014.04.03
 
 
-                        //- card 1 bg+text
-                        .fixed_block.card_1
-                            .ui.right.teal.corner.label(title="友情置顶")
-                                i.fa-star.fa
-                            .imgbox
-                                .ta_cont
-                                    p(style="font-size:12px; text-align:center;")
+                        //- //- card 1 bg+text
+                        //- .fixed_block.card_1
+                        //-     .ui.right.teal.corner.label(title="友情置顶")
+                        //-         i.fa-star.fa
+                        //-     .imgbox
+                        //-         .ta_cont
+                        //-             p(style="font-size:12px; text-align:center;")
 
-                                        a(href="http://biubiubiubiu.com/",target="_blank")
-                                            i(style="display: block;width: 40px;height: 40px;margin: 0 auto;margin-bottom: 10px;font-size: 14px;font-style: normal;color: #fff;font-weight: bold;line-height: 40px;background: #333;border-radius: 50%;") Biu
-                                            | http://biubiubiubiu.com
+                        //-                 a(href="http://biubiubiubiu.com/",target="_blank")
+                        //-                     i(style="display: block;width: 40px;height: 40px;margin: 0 auto;margin-bottom: 10px;font-size: 14px;font-style: normal;color: #fff;font-weight: bold;line-height: 40px;background: #333;border-radius: 50%;") Biu
+                        //-                     | http://biubiubiubiu.com
 
-                                       //- span
-                                           //- | —— nobody 2014.04.03
 
-                        .fixed_block.card_4
-                            .ui.right.teal.corner.label(title="友情置顶")
-                                i.fa-star.fa
-                            .imgbox(style="background-image: none;")
-                                a.ta_cover(style="background-image:url(https://img3.doubanio.com/pics/nav/lg_main_a11.png); background-position: center center; background-size: 100px;  background-repeat: no-repeat;")
-                                .ta_cont
-                                    p(style="padding-top: 300px;line-height:50px;")
-                                        span(style="font-size:12px;padding-top:0;")
-                                            a(href="https://jobs.douban.com/", target="_blank", style="color:#2aac5e;")
-                                                | Join Douban
+                        //- .fixed_block.card_4
+                        //-     .ui.right.teal.corner.label(title="友情置顶")
+                        //-         i.fa-star.fa
+                        //-     .imgbox(style="background-image: none;")
+                        //-         a.ta_cover(style="background-image:url(https://img3.doubanio.com/pics/nav/lg_main_a11.png); background-position: center center; background-size: 100px;  background-repeat: no-repeat;")
+                        //-         .ta_cont
+                        //-             p(style="padding-top: 300px;line-height:50px;")
+                        //-                 span(style="font-size:12px;padding-top:0;")
+                        //-                     a(href="https://jobs.douban.com/", target="_blank", style="color:#2aac5e;")
+                        //-                         | Join Douban
 
                         //- //- card blocking
                         //- .fixed_block.card_4
