upgrade packages. disabled qiniu upload

--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -231,6 +231,6 @@ block content
     //- script(src="js/player/mod.csstransforms.min.js")
     //- script(src="js/player/circle.player.js")
 
-    script(src="/socket.io/socket.io.js")
+    script(src="/js/socket.io.js")
     script(defer, src="/js/plugins.min.js")
     script(defer, src="/js/perber.js")
