--- a/perber/views/themes/default/layout.jade
+++ b/perber/views/themes/default/layout.jade
@@ -39,6 +39,11 @@ html(class="no-js", lang="en")
 
         script.
             !function(r,e,a,c,t){r.GoogleAnalyticsObject=a,r[a]||(r[a]=function(){(r[a].q=r[a].q||[]).push(arguments)}),r[a].l=1*new Date(),c=e.createElement("script"),t=e.scripts[0],c.src="//www.google-analytics.com/analytics.js",t.parentNode.insertBefore(c,t)}(window,document,"ga"),ga("create","UA-44986847-1", "perber.com"),ga("send","pageview");
+
+        //- <!-- Google tag (gtag.js) -->
+        script(async, src="https://www.googletagmanager.com/gtag/js?id=G-CFGDZ85DHN")
+        script.
+            window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-CFGDZ85DHN');
     body
         block content
 
